--- a/src/section/home/styles.css
+++ b/src/section/home/styles.css
@@ -1,5 +1,5 @@
 /* HomeSection.css */
-/* Desktop screen */
+
 @media only screen and (min-width: 768px) {
   .home-section {
     width: 100%;
@@ -19,7 +19,7 @@
 /* Styles for slick-carousel */
 .slick-prev,
 .slick-next {
-  z-index: 1;
+  z-index: 5;
   top: 50%;
   width: 70px;
   height: 70px;
